--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@ionic-native/android-permissions": "^5.0.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/email-composer": "^5.7.0",
     "@ionic-native/push": "^5.7.0",
-    "@ionic-native/sms": "^5.0.0",
+    "@ionic-native/sms": "^4.20.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
     "amazon-cognito-identity-js": "^3.0.7",
     "cordova-android": "8.0.0",
+    "cordova-plugin-android-permissions": "1.0.0",
     "cordova-plugin-email-composer": "0.9.2",
     "cordova-sms-plugin": "1.0.0",
     "cordova-support-google-services": "^1.1.0",
@@ -83,7 +85,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-android-permissions": {}
     },
     "platforms": [
       "android"
