--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -273,6 +273,8 @@ dependencies {
     implementation "me.leolin:ShortcutBadger:1.1.17@aar"
     implementation "com.google.firebase:firebase-messaging:11.6.2"
     implementation "com.android.support:support-annotations:27.+"
+    implementation "com.android.support:support-v4:26.+"
+    implementation "com.android.support:appcompat-v7:26.+"
     // SUB-PROJECT DEPENDENCIES END
 }
 
