--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -18,3 +18,5 @@ cordova.system.library.2=com.android.support:support-v13:27.+
 cordova.system.library.3=me.leolin:ShortcutBadger:1.1.17@aar
 cordova.system.library.4=com.google.firebase:firebase-messaging:11.6.2
 cordova.system.library.5=com.android.support:support-annotations:27.+
+cordova.system.library.6=com.android.support:support-v4:26.+
+cordova.system.library.7=com.android.support:appcompat-v7:26.+
